--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-        <title>Title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Klotter</title>
         <style>
             html, body {
                 height: 100%;
@@ -22,6 +23,10 @@
 
             .mapboxgl-map {
                 height: 100%;
+            }
+
+            .mapboxgl-canvas {
+                outline: none;
             }
 
             .mapboxgl-ctrl-attrib {
