--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             .mapboxgl-ctrl-attrib {
                 display: none;
             }
+
+            .mapboxgl-popup-content {
+                padding: 6px !important;
+            }
         </style>
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     </head>
